# kafka-airflow

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  requirements.txt
alert-proxy/: Dockerfile  app.py  pyproject.toml
alert-proxy/config/: config.py
alloy/: config-logs.alloy
config/: kafka-connect-jmx-exporter.yml  kafka-jmx-exporter.yml
config/statsd/: statsd.yaml  statsd_official.yaml
dags/: failing_dag.py  kafka_batch_consume_messages.py  kafka_create_topic.py  kafka_produce_messages.py  settings.py
grafana/dashboards/: kafka-lag-exporter.json
grafana/dashboards/airflow/: airflow-overview.json
grafana/provisioning/alerting/: alert_rules.yml  contact_points.yml
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: datasource.yml
lag-exporter/: application.conf
loki/: loki-config.yaml
otel/: otel-collector-config.yml
prometheus/: prometheus.yml
